--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,13 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  div#board
+    div.tile
+    div.tile
+    div.tile
+    div.tile
+    div.tile
+    div.tile
+    div.tile
+    div.tile
+    div.tile
