checks for winner

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,13 +13,21 @@ a {
   margin: 0 auto;
   width: 500px;
   height: 500px;
-  border: solid black 2px;
 }
 
 .tile {
-  display: inline-block;
   width: 150px;
   height: 150px;
-  border: solid green 2px;
   vertical-align: top;
+  display: inline-block;
+  font-size: 5em;
+  line-height: 150px;
+}
+
+.right-border {
+  border-right: solid blue 2px;
+}
+
+.top-border {
+  border-top: solid blue 2px;
 }
