--- a/views/index.jade
+++ b/views/index.jade
@@ -2,14 +2,13 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
   div#board
-    div.tile
-    div.tile
-    div.tile
-    div.tile
-    div.tile
-    div.tile
-    div.tile
-    div.tile
-    div.tile
+    div.tile.right-border#tile1
+    div.tile.right-border#tile2
+    div.tile#tile3
+    div.tile.right-border.top-border#tile4
+    div.tile.right-border.top-border#tile5
+    div.tile.top-border#tile6
+    div.tile.right-border.top-border#tile7
+    div.tile.right-border.top-border#tile8
+    div.tile.top-border#tile9
